--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Broyalty SetsCalc</title>
-<meta content="width=1024" name="viewport">
+<title>Broyalty ActivityCalc</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -29,81 +29,96 @@
   </head>
 <body>
 <div class="container">
-<h1>Broyalty SetsCalc</h2>
-<table id="table" class="table table-striped table-sm" >
-<thead style="font-size: 10px;">
-<tr>
-<th class="" style="width:15%;">Item Type</th>
-<th class="" style="width:8%;">Lvl From</th>
-<th class="" style="width:8%;">Lvl To</th>
-<th class="" style="width:8%;">Quantity</th>
-<th class="item_component"><img src="img/component.png" style="max-width: 32px"/></th>
-<th class="item_bulb"><img src="img/bulb.png" style="max-width: 32px"/></th>
-<th class="item_coil"><img src="img/coil.png" style="max-width: 32px"/></th>
-<th class="item_gear"><img src="img/gear.png" style="max-width: 32px"/></th>
-<th class="item_brotonium"><img src="img/brotonium.png" style="max-width: 32px"/></th>
-<th class="item_blueprints"><img src="img/blueprints.png" style="max-width: 32px"/></th>
-<th class="item_hours_premium"><img src="img/premium.png" style="max-width: 32px"/> Time</th>
-<th class="item_hours"><img src="img/simple.png" style="max-width: 32px"/> Time</th>
-</tr>
-</thead>
-<tfoot>
-<tr id="summary" >
-<td class=""></td>
-<td class=""></td>
-<td class=""></td>
-<td class=""></td>
-<td class="item_component"></td>
-<td class="item_bulb"></td>
-<td class="item_coil"></td>
-<td class="item_gear"></td>
-<td class="item_brotonium"></td>
-<td class="item_blueprints"></td>
-<td class="item_hours_premium"></td>
-<td class="item_hours"></td>
-</tr>
-</tfoot>
-<tbody>
-<tr class="d-none" id="row_tpl">
-<td class="">
-<div class="dropdown item_type_dropdown">
-  <a class="btn btn-light dropdown-toggle" href="javascript:void(0);" role="button" data-bs-toggle="dropdown">
-    Select type
-  </a>
-
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="javascript:void(0);" data-value="helmet"><img src="img/helmet.png" style="max-width: 18px;"> Helmet</a></li>
-    <li><a class="dropdown-item" href="javascript:void(0);" data-value="chest"><img src="img/chest.png" style="max-width: 18px;"> Chest</a></li>
-    <li><a class="dropdown-item" href="javascript:void(0);" data-value="weapon"><img src="img/weapon.png" style="max-width: 18px;"> Weapon</a></li>
-    <li><a class="dropdown-item" href="javascript:void(0);" data-value="jewelry"><img src="img/ring.png" style="max-width: 18px;"><img src="img/earring.png" style="max-width: 18px;"> Jewelry</a></li>
-    <li><a class="dropdown-item" href="javascript:void(0);" data-value="accessories"><img src="img/glove.png" style="max-width: 18px;"><img src="img/belt.png" style="max-width: 18px;"><img src="img/boot.png" style="max-width: 18px;"><img src="img/bracer.png" style="max-width: 18px;"> Accessories</a></li>
-  </ul>
+<h1>Broyalty ActivityCalc</h2>
+<div class="row">
+	<div class="col-12">
+		<div class="form-group">
+			<label>Your Throne Room Level</label>
+			<select id="calc_throne_room_level" class="form-control form-control-sm">
+				<option value="5">5 Level</option>
+				<option value="6">6 Level</option>
+				<option value="7">7 Level</option>
+				<option value="8">8 Level</option>
+			</select>
+		</div>
+	</div>
+	<div class="col-6">
+		<div class="form-group">
+			<label>Your Food Per Hour</label>
+			<input  type="number" id="calc_food_per_hour" class="form-control form-control-sm" value="0"/>
+		</div>
+	</div>
+	<div class="col-6">
+		<div class="form-group">
+			<label>Your Food Per Day</label>
+			<input  type="number" id="calc_food_per_day" readonly class="form-control form-control-sm" value="0"/>
+		</div>
+	</div>
+	<div class="col-12">
+		<div class="form-group">
+			<label>Season Length (days)</label>
+			<input type="number" id="calc_season_length" class="form-control form-control-sm" value="25"/>
+		</div>
+	</div>
 </div>
-<select class="item_type form-control form-control-sm d-none">
-<option value=""></option>
-<option value="jewelry">jewelry</option>
-<option value="weapon">weapon</option>
-<option value="chest">chest</option> 
-<option value="helmet">helmet</option>
-<option value="accessories">accessories</option>
-</select></td>
-<td class=""><input type="number" min="1" max="70" value="1" placeholder="1-70" class="item_level_from form-control form-control-sm"/></td>
-<td class=""><input type="number" min="1" max="70" value="70" placeholder="1-70" class="item_level_to form-control form-control-sm"/></td>
-<td class=""><input type="number" min="1" value="1" placeholder="" class="item_quantity form-control form-control-sm"/></td>
-<td class="item_component"></td>
-<td class="item_bulb"></td>
-<td class="item_coil"></td>
-<td class="item_gear"></td>
-<td class="item_brotonium"></td>
-<td class="item_blueprints"></td>
-<td class="item_hours_premium"></td>
-<td class="item_hours"></td>
-</tr>
-</tbody>
-</table>
+<div class="row">
+	<div class="col-6">
+		<h2>Tournament</h2>
+		<div class="form-group">
+			<label>Raids Per Day</label>
+			<input type="number" id="calc_arena_raid_per_day" class="form-control form-control-sm" value="0"/>
+		</div>
+		<div class="form-group">
+			<label>You Average Medals Per Raid (w/o booster)</label>
+			<input type="number" id="calc_arena_avg_medals_per_raid" class="form-control form-control-sm" value="0"/>
+		</div>
+	</div>
+	<div class="col-6">
+		<h2>W Devourer </h2>
+		<div class="form-group">
+			<label>Raids Per Day</label>
+			<input type="number" id="calc_devourer_raid_per_day" class="form-control form-control-sm" value="0"/>
+		</div>
+		<div class="form-group">
+			<label>You Average Eyes Per Raid (w/o booster)</label>
+			<input type="number" id="calc_devourer_avg_eyes_per_raid" class="form-control form-control-sm" value="0"/>
+		</div>
+	</div>
+	<div class="col-12">
+		<div class="form-group">
+			<label class="text-center d-block">Food spending balance</label>
+			<div class="progress">
+			  <div class="progress-bar bg-warning" id="calc_arena_progressbar" role="progressbar" style="width: 0%">Tournament</div>
+			  <div class="progress-bar bg-info" id="calc_devourer_progressbar" role="progressbar" style="width: 0%">Devourer</div>
+			  <div class="progress-bar bg-success" id="calc_free_progressbar" role="progressbar" style="width: 100%"></div>
+			</div>
+		</div>
+		<div class="alert alert-danger text-center" id="calc_food_spending_balance_alert" style="display:none;">
+			Your requests don't match your income!
+		</div>
+	</div>
+	<div class="col-6">
+		<div class="form-group">
+			<label>Food spending</label>
+			<div><span id="calc_arena_food_spending"></span></div>
+			<label>Food costs day/season</label>
+			<div><span id="calc_arena_food_cost_per_day"></span>/<span id="calc_arena_food_cost_per_season"></span></div>
+			<label>Medals reward day/season</label>
+			<div><span id="calc_arena_medals_reward_per_day"></span>/<span id="calc_arena_medals_reward_per_season"></span></div>
+		</div>
+	</div>
+	<div class="col-6">
+		<div class="form-group">
+			<label>Food spending</label>
+			<div><span id="calc_devourer_food_spending"></span></div>
+			<label>Food costs day/season</label>
+			<div><span id="calc_devourer_food_cost_per_day"></span>/<span id="calc_devourer_food_cost_per_season"></span></div>
+			<label>Eyes reward day/season</label>
+			<div><span id="calc_devourer_eyes_reward_per_day"></span>/<span id="calc_devourer_eyes_reward_per_season"></span></div>
+		</div>
+	</div>
+</div>
 <br/>
-<button type="button" id="add_button" class="btn btn-success">Add</button>
-<button type="button" id="share_button" class="btn btn-dark">Share</button>
 <hr/>
 <div class="text-center">
 <div class="text-muted">Created by </div>
@@ -111,22 +126,6 @@
 <div><a target="_blank" href="https://broyalty.fandom.com/ru/wiki/Broyalty_Wiki">Broyalty Wiki</a></div>
 <div><a target="_blank" href="http://bit.ly/broyalty">Много полезной информации по игре</a></div>
 </div>
-</div>
-<div class="modal fade" id="share_modal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">COPY SHARE URL</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <input class="form-control" id="share_modal_input" readonly="readonly" value=""/>
-      </div>
-      <div class="modal-footer"> 
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
 </div>
 <div class="modal fade" id="zajralis_modal" tabindex="-1">
   <div class="modal-dialog">
