--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 <div><a target="_blank" href="https://broyalty.fandom.com/ru/wiki/Broyalty_Wiki">Broyalty Wiki</a></div>
 <div><a target="_blank" href="https://t.me/broyaltywiki">Broyalty Wiki Telegram</a></div>
 <div><a target="_blank" href="https://yagrandz.github.io/broyalty.setscalc/">Broyalty SetsCalc</a></div>
+<div><a target="_blank" href="https://yagrandz.github.io/broyalty.tops/devourer/">Broyalty Devourer Top</a></div>
 <div><a target="_blank" href="http://bit.ly/broyalty">Много полезной информации по игре</a></div>
 </div>
 </div>
