--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
 			<label>You Medals Per Raid</label>
 			<input type="number" id="calc_arena_avg_medals_per_raid" class="form-control form-control-sm" value="0"/>
 		</div>
+		<div class="form-group">
+			<label>You Keys Per Raid</label>
+			<input type="number" id="calc_arena_avg_keys_per_raid" class="form-control form-control-sm" value="0"/>
+		</div>
 	</div>
 	<div class="col-6">
 		<div class="text-center"><img class="img-fluid" style="height: 64px;" src="img/world_devourer.png"/></div>
@@ -109,6 +113,10 @@
 		<div class="form-group">
 			<label>You Eyes Per Raid</label>
 			<input type="number" id="calc_devourer_avg_eyes_per_raid" class="form-control form-control-sm" value="0"/>
+		</div>
+		<div class="form-group">
+			<label>You Keys Per Raid</label>
+			<input type="number" id="calc_devourer_avg_keys_per_raid" class="form-control form-control-sm" value="0"/>
 		</div>
 	</div>
 	<div class="col-12">
@@ -131,12 +139,21 @@
 		<div class="row">
 			<div class="col-12"><img style="width:1em" src="img/food.png"/><span id="calc_arena_food_cost_per_day"></span></div>
 			<div class="col-12"><img style="width:1em" src="img/medal.png"/><span id="calc_arena_medals_reward_per_day"></span></div>
+			<div class="col-12"><img style="width:1em" src="img/keys.png"/><span id="calc_arena_keys_reward_per_day"></span></div>
 		</div>
 	</div>
 	<div class="col-6" style="font-size: 1.5em;">
 		<div class="row">
 			<div class="col-12"><img style="width:1em" src="img/food.png"/><span id="calc_devourer_food_cost_per_day"></span></div>
 			<div class="col-12"><img style="width:1em" src="img/eye.png"/><span id="calc_devourer_eyes_reward_per_day"></span></div>
+			<div class="col-12"><img style="width:1em" src="img/keys.png"/><span id="calc_devourer_keys_reward_per_day"></span></div>
+		</div>
+	</div>
+	<div class="col-12">
+		<h3  class="text-center">Summary Day</h3>
+		<div class="row" style="font-size: 1.5em;">
+			<div class="col-12"><img style="width:1em" src="img/food.png"/><span id="calc_food_cost_per_day_summary"></span></div>
+			<div class="col-12"><img style="width:1em" src="img/keys.png"/><span id="calc_keys_reward_per_day_summary"></span></div>
 		</div>
 	</div>
 	<div class="col-12">
@@ -146,12 +163,21 @@
 		<div class="row">
 			<div class="col-12"><img style="width:1em" src="img/food.png"/><span id="calc_arena_food_cost_per_season"></span></div>
 			<div class="col-12"><img style="width:1em" src="img/medal.png"/><span id="calc_arena_medals_reward_per_season"></span></div>
+			<div class="col-12"><img style="width:1em" src="img/keys.png"/><span id="calc_arena_keys_reward_per_season"></span></div>
 		</div>
 	</div>
 	<div class="col-6" style="font-size: 1.5em;">
 		<div class="row">
 			<div class="col-12"><img style="width:1em" src="img/food.png"/><span id="calc_devourer_food_cost_per_season"></span></div>
 			<div class="col-12"><img style="width:1em" src="img/eye.png"/><span id="calc_devourer_eyes_reward_per_season"></span></div>
+			<div class="col-12"><img style="width:1em" src="img/keys.png"/><span id="calc_devourer_keys_reward_per_season"></span></div>
+		</div>
+	</div>
+	<div class="col-12">
+		<h3  class="text-center">Summary Season</h3>
+		<div class="row" style="font-size: 1.5em;">
+			<div class="col-12"><img style="width:1em" src="img/food.png"/><span id="calc_food_cost_per_season_summary"></span></div>
+			<div class="col-12"><img style="width:1em" src="img/keys.png"/><span id="calc_keys_reward_per_season_summary"></span></div>
 		</div>
 	</div>
 </div>
